@@ -52,6 +52,8 @@ Trunk (unreleased changes)
   HCAT-63. RPM package integration with Hadoop (khorgath via hashutosh)
 
   IMPROVEMENTS
+  HCAT-166. Making configuration/installation automatable (vikram.dixit via khorgath)
+
   HCAT-179. Make HCatalog compile against Hadoop 0.23 (thw via khorgath)
 
   HCAT-194. Better error messages for HCatalog access control errors (julienledem via hashutosh)  
